@@ -1,0 +1,6 @@
+#readelf: -s
+#name: .set with expression
+
+#...
+.*ABS.*shift.*
+#pass
