@@ -1,0 +1,5 @@
+.text
+	.global foo
+foo:
+	.set	shift, 32
+	.set	shift, shift - 1
